<resources>
    <string name="app_name">UnityGaming</string>
    <string name="client_id">720254429106-vpf8f70q5rcm8gr3eioojqrcdj4lj4hk.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="eres_nuevo_usuario_registrate">¿Eres nuevo usuario? Registrate</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciasesion">IniciaSesion</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="imagen">Imagen</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="olvidaste_tu_contrase_a_recuperala">¿Olvidaste tu contraseña? Recuperala</string>
    <string name="informacionCompleta">Completa La Informacion</string>
    <string name="confirmar">Confirmar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="aqui_podras_ver_todas_ntodas_las_publicaciones">Aqui podras ver todas \nTodas las publicaciones</string>
    <string name="ultimas_publicaciones">Ultimas publicaciones</string>
    <string name="hola_nombreUsuario">Hola, Esteban!</string>
    <string name="buscar">Buscar...</string>
    <string name="inicio">Inicio</string>
    <string name="filtrar">Filtrar</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="perfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_publicaci_n">CREAR PUBLICACIÓN</string>
    <string name="nombre_del_juego">Nombre del juego</string>
    <string name="subir_imagen">Subir imagen</string>
    <string name="descripcion">Escribe un texto...</string>
    <string name="categorias">CATEGORIAS</string>
    <string name="pc">PC</string>
    <string name="ps5">PS5</string>
    <string name="xbox">XBOX</string>
    <string name="nintendo">NINTENDO</string>
    <string name="publicar">PUBLICAR</string>
    <string name="titulo_del_juego">Titulo del juego</string>
    <string name="descripcion_del_juego">Descripcion del juego...</string>
    <string name="telefono">Telefono</string>
    <string name="transtionname_picture">transitionnamepicture</string>
    <string name="telefonoPrueba">3132424243</string>
    <string name="telefono_prueba">TELEFONO</string>
    <string name="numero_publicaciones_prueba">0</string>
    <string name="publicaciones_prueba">PUBLICACIONES</string>
    <string name="nombre_del_perfil">NOMBRE DEL PERFIL</string>
    <string name="correo_prueba">correo@algo.com</string>
    <string name="no_hay_publicaciones">No hay publicaciones</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="total_resultados">Total resultados:</string>
    <string name="_0">0</string>
    <string name="hace_0_min">Hace 0 Min</string>
    <string name="likes">Likes</string>
    <string name="nombre_de_usuario">Nombre De Usuario</string>
    <string name="_312550212">312550212</string>
    <string name="ver_perfil">Ver Perfil</string>
    <string name="titulo_del_juego_post">Título del juego</string>
    <string name="description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="descripcionposts">Descripción</string>
    <string name="ps5post">PS5</string>
    <string name="comentarios">COMENTARIOS</string>
    <string name="nombre_de_usuario_card">Nombre De Usuario</string>
    <string name="el_comentario_ira_aqui">El comentario ira aqui</string>
    <string name="titulo_de_la_publicacion">Titulo De La Publicacion</string>
    <string name="hace_0_minutos">Hace 0 Minutos</string>
    <string name="_0_me_gustas">0 Me Gustas</string>
    <string name="playstation">Play Station</string>
    <string name="xboxf">XBOX</string>
    <string name="nintendof">Nintendo</string>
    <string name="pcf">PC</string>
    <string name="mensaje">Mensaje...</string>
    <string name="la_comunidad_hace_la_uni_n">La comunidad hace la unión</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="unitygaming">UnityGaming</string>
    <string name="ingresa_tu_nombre">Nombre</string>
    <string name="ingresa_tu_email">Email</string>
    <string name="ingresa_tu_contrase_a">Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresa_tu_telefono">Teléfono</string>
    <string name="registrarse">Registrarse</string>
    <string name="has_olvidado_la_contrase_a">¿Eres nuevo Usuario? Regístrate</string>
    <string name="o_inicia_con">O Inicia Con</string>
    <string name="continuar_con_google">Continuar Con Google</string>
    <string name="pub_cat">Publicaciones por Categoría</string>
</resources>