<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewPostCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imagen" />

        <TextView
            android:id="@+id/textViewTitlePostCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_del_juego"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            android:maxLines="1"
            android:fontFamily="@font/monobold"
            android:textColor="@color/dark_blue"
            />

        <TextView
            android:id="@+id/textViewUsernamePostCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_usuario"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="13sp"
            android:maxLines="1"
            android:fontFamily="@font/monobolditalic"
            android:textColor="@color/dark_blue"
            />

        <TextView
            android:id="@+id/textViewDescriptionPostCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_del_juego"
            android:layout_margin="10dp"
            android:fontFamily="@font/monoligth"
            android:maxLines="2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_blue"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/imageViewLike"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_like_ligth"
                android:contentDescription="@string/imagen" />
            <TextView
                android:id="@+id/textViewLikes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:layout_weight="1"
                android:text="@string/_0_me_gustas"
                android:fontFamily="@font/monoligth"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>