<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FiltersFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/black" />

                <ImageView
                    android:id="@+id/imageViewCoverP"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/cover_image"
                    android:scaleType="centerCrop"
                    android:alpha="0.8"
                    app:layout_collapseMode="parallax"
                    android:transitionName="@string/transtionname_picture"
                    android:contentDescription="@string/imagen" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageP"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_person"
                    app:civ_circle_background_color="@color/colorGrayLight"
                    android:layout_marginTop="130dp"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="5dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:id="@+id/textViewPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telefonoPrueba"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telefono_prueba"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="13sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center|left"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:id="@+id/textViewPostNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numero_publicaciones_prueba"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publicaciones_prueba"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="13sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_del_perfil"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correo_prueba"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold"
                        android:layout_marginTop="7dp"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="10dp"
                    tools:ignore="RtlHardcoded,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/baseline_edit_24"
                        android:contentDescription="@string/imagen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editar_perfil"
                        android:textColor="@color/white"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewPostExist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_hay_publicaciones"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textStyle="italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMyPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>